	(CygbuildInstallPackageDocs): Install also directories
	examples, example and sample.

	* bin/cygbuild.pl (DebianRulesInstalldirs): Remove.
	(DebianRulesInstall): Remove.
	(DebianRulesProcess): Remove.
	(DebianMakefile): Remove.
	(DebianRulesMain): Remove.
	(CygbuildInstallFixPermissions): Incorrect variable at the end.
	Use `readList'.

2008-02-25  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildDefineGlobalScript): Use
	`CygbuildVersionInfo' instead of unreliable bash substitution
	code.
	(CygbuildDefineVersionVariables): Remove exit and return
	error code.
	(CygbuildDefineVersionVariables): Remove extra code from end.
	Die if `CygbuildDefineVersionVariables' fails.
	(CygbuildCmdInstallCheckBinFiles): Warn about .py and .pl
	exensions.
	(CygbuildDefineGlobalScript): Adjust SCRIPT_PKGVER.

2008-02-24  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPod2man): Add --release to pod2man.
	(CygbuildCygcheckMain): Make sure slashes are correct.
	(CygbuildInstallPackageDocs): Streamline function. If there
	is no doc/ dir, still run the install if --include option is set.
	(CygbuildIsDirEmpty): Remove die call.
	(CygbuildFileConvertToUnix): Ignore *.rtf etc

2008-02-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl: (OPTIONAL EXTERNAL FILES::manualpage.1.pod):
	Rename. Was manualpage.pod. Explain basics of manual page
	sections.

	* bin/cygbuild.sh:
	(CygbuildBootVariablesGlobalMain) Add *.{rej,bak,tmp} to
	CYGBUILD_INSTALL_IGNORE.
	(CygbuildInstallPackageDocs): Comment out
	pattern match code and use solely CYGBUILD_INSTALL_IGNORE.
	files.
	(CygbuildInstallFixDocdirInstall): Protect regexp with
	`CygbuildStrToRegexpSafe'.
	(CygbuildInstallFixDocdirInstall): Add --test mode support.
	(CygbuildCmdFilesWrite): Add unpack support for template files.
	E.g. install cygwin-announce.mail.tmp as cygwin-announce.mail.
	(CygbuildInstallFixDocdirInstall): Return of nothing to do.